Update Get Started

--- a/index.mdx
+++ b/index.mdx
@@ -33,6 +33,31 @@ Setting up with Channel3 is easy. Get started in just a few steps:
       Use your Google account, GitHub, or email to sign up.
     </Card>
   </Step>
+  <Step title="Curate Your Catalog">
+    Every developer on Channel3 gets to pre-select a unique catalog. You can
+    choose to sell categories like "Pet Supplies" or brands like "The Gap."
+
+    Soon, you'll be able to sell "anything orange," "fishing gear for beginners," etc.
+
+<CardGroup cols={2}>
+    <Card
+      title="Add Brands"
+      icon="store"
+      href="https://trychannel3.com/catalog/categories"
+    >
+      Choose from 50k brands. If you don't see a brand you want, you can request it.
+    </Card>
+
+    <Card
+      title="Add Categories"
+      icon="list"
+      href="https://trychannel3.com/catalog/available-brands"
+    >
+      Choose from 15 categories. We'll soon increase the specificity to 5k categories.
+    </Card>
+
+</CardGroup>
+  </Step>
   <Step title="Generate Your API Key">
     Your API key identifies you to Channel3. We use it to track the sales you
     drive, so you can get paid.
