--- a/python-sdk.mdx
+++ b/python-sdk.mdx
@@ -9,11 +9,11 @@ You can install the SDK using your preferred tool:
 
 <CodeGroup>
 ```bash pip
-pip install channel3_sdk
+pip install channel3-sdk
 ```
 
 ```bash uv
-uv add channel3_sdk
+uv add channel3-sdk
 ```
 
 </CodeGroup>
