--- a/api-reference/endpoint/enrich.mdx
+++ b/api-reference/endpoint/enrich.mdx
@@ -3,4 +3,4 @@ title: "Enrich"
 openapi: "POST /v0/enrich"
 ---
 
-Enrich a specific URL to get product info for it.
+Search by product URL, get back full product information from Channel3's product database.
