Fix intro links

--- a/index.mdx
+++ b/index.mdx
@@ -43,7 +43,7 @@ Setting up with Channel3 is easy. Get started in just a few steps:
     <Card
       title="Add Brands"
       icon="store"
-      href="https://trychannel3.com/dashboard/catalog/categories"
+      href="https://trychannel3.com/dashboard/available-brands"
     >
       Choose from 50k brands. If you don't see a brand you want, you can request it.
     </Card>
@@ -51,7 +51,7 @@ Setting up with Channel3 is easy. Get started in just a few steps:
     <Card
       title="Add Categories"
       icon="list"
-      href="https://trychannel3.com/dashboard/catalog/available-brands"
+      href="https://trychannel3.com/dashboard/categories"
     >
       Choose from 15 categories. We'll soon increase the specificity to 5k categories.
     </Card>
@@ -64,7 +64,7 @@ Setting up with Channel3 is easy. Get started in just a few steps:
     <Card
       title="Go to API Keys in Dashboard"
       icon="key"
-      href="https://trychannel3.com/dashboard/api"
+      href="https://trychannel3.com/dashboard/api-keys"
     >
       Generate a new API key, and keep it safe.
     </Card>
