New API endpoints

--- a/api-reference/endpoint/enrich.mdx
+++ b/api-reference/endpoint/enrich.mdx
@@ -1,6 +1,4 @@
 ---
-title: "Enrich"
+title: "Enrich Product"
 openapi: "POST /v0/enrich"
 ---
-
-Search by product URL, get back full product information from Channel3's product database.
