--- a/index.mdx
+++ b/index.mdx
@@ -2,85 +2,18 @@
 title: Introduction
 ---
 
-## Welcome to Channel3
+## What is Channel3?
 
 Channel3 lets developers build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, an agent that purchases products autononmously, or something totally new, Channel3 can power it.
 
-**What can you do with Channel3?**
+## What can you do with Channel3?
 
-- **Create Your Own Catalog:** Curate a catalog of brands and products.
-- **Natural Language Search:** Search like you talk (e.g., "warm winter coat for hiking").
-- **Visual Search:** Find products with an image. This can power a visual search engine, or a visual shopping assistant.
-- **Multimodal Search:** Combine text _and_ images for ultra-precise queries (e.g., "blue version of this dress" + image of the dress).
-- **Recommend Products:** Intelligently suggest items your users will love.
-- **Earn Revenue:** Monetize when your customers make purchases.
+### Find any product on the internet
 
-Let's get you started!
+Search for furniture, fashion, electronics — whatever you can think of – with text, images, or both.
 
-## Getting Started: Your First Steps
+<Note>We're starting with physical products in the U.S.</Note>
 
-Setting up with Channel3 is easy. Get started in just a few steps:
+### Earn commission on sales
 
-<Steps>
-  <Step title="Create Your Free Account">
-    First things first, you'll need a Channel3 account. This is where you'll
-    manage your API keys, track usage, and more.
-    <Card
-      title="Sign Up for Channel3"
-      icon="user-plus"
-      href="https://trychannel3.com/sign-up"
-    >
-      Use your Google account, GitHub, or email to sign up.
-    </Card>
-  </Step>
-  <Step title="Curate Your Catalog">
-    Every developer on Channel3 gets to pre-select a unique catalog. You can
-    choose to sell categories like "Pet Supplies" or brands like "The Gap."
-
-    Soon, you'll be able to sell "anything orange," "fishing gear for beginners," etc.
-
-<CardGroup cols={2}>
-    <Card
-      title="Add Brands"
-      icon="store"
-      href="https://trychannel3.com/dashboard/catalog/categories"
-    >
-      Choose from 50k brands. If you don't see a brand you want, you can request it.
-    </Card>
-
-    <Card
-      title="Add Categories"
-      icon="list"
-      href="https://trychannel3.com/dashboard/catalog/available-brands"
-    >
-      Choose from 15 categories. We'll soon increase the specificity to 5k categories.
-    </Card>
-
-</CardGroup>
-  </Step>
-  <Step title="Generate Your API Key">
-    Your API key identifies you to Channel3. We use it to track the sales you
-    drive, so you can get paid.
-    <Card
-      title="Go to API Keys in Dashboard"
-      icon="key"
-      href="https://trychannel3.com/dashboard/api"
-    >
-      Generate a new API key, and keep it safe.
-    </Card>
-  </Step>
-  <Step title="Consider Your Use-Case">
-    <CardGroup cols={2}>
-      <Card title="Building an Agent?" icon="robot" href="/mcp-overview">
-        Simply add our MCP to your agent.
-      </Card>
-      <Card title="Building an App?" icon="code" href="/python-sdk">
-        Explore our SDKs, or call our API directly.
-      </Card>
-    </CardGroup>
-  </Step>
-</Steps>
-
-## Next Steps
-
-We're excited to see what you build. For help, reach out to us at [founders@trychannel3.com](mailto:founders@trychannel3.com).
+We've partnered with tens of thousands of brands who pay us when we drive them sales. We take a cut and pay you the rest.
