Website and category filters

--- a/index.mdx
+++ b/index.mdx
@@ -4,7 +4,10 @@ title: Introduction
 
 ## What is Channel3?
 
-Channel3 lets developers build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, an agent that purchases products autononmously, or something totally new, Channel3 can power it.
+Channel3 is building a database of every product on the internet.
+
+Developers use the Channel3 API to build AI shopping apps and agents.
+Whether you're creating a smart recommendation engine, a visual search tool, an agent that purchases products autononmously, or something totally new, Channel3 can power it.
 
 ## What can you do with Channel3?
 
@@ -12,7 +15,11 @@ Channel3 lets developers build AI shopping apps and agents. Whether you're creat
 
 Search for furniture, fashion, electronics — whatever you can think of – with text, images, or both.
 
-<Note>We're starting with physical products in the U.S.</Note>
+<Note>
+  We're starting with physical products in the U.S. Please{" "}
+  <a href="mailto:support@trychannel3.com">contact us</a> if you're looking for
+  other geographies.
+</Note>
 
 ### Earn commission on sales
 
