--- a/mcp-overview.mdx
+++ b/mcp-overview.mdx
@@ -5,60 +5,11 @@ description: "Add the Channel3 MCP to your agent"
 
 ## What is the Channel3 MCP?
 
-Model Context Protocol (MCP) is a standard that allows AI agents to securely connect to external data sources and tools. Think of it as a bridge that lets your AI assistant access real-world information and take actions beyond just generating text.
+The Channel3 MCP specifically gives your AI agents superpowers for product discovery. Your agent can search through tens of millions of real products in real-time, complete with current prices, rich images, detailed descriptions, and real-time availability.
 
-The Channel3 MCP specifically gives your AI agents superpowers for product discovery. Your agent can search through millions of real products in real-time, complete with current prices, rich images, detailed descriptions, and real-time availability.
+## Get Started in 1 Minute
 
-## Example Projects You Could Build
-
-<CardGroup cols={2}>
-  <Card title="Personal Shopping Assistant" icon="robot">
-    Build an AI that helps users find the perfect product based on their specific needs, budget, and preferences. Great for gift recommendations or comparing products across categories.
-  </Card>
-
-  <Card title="Niche Shopping Curator" icon="robot">
-    Build specialized shopping assistants for specific niches (tech gear for developers, art supplies for creators, fitness equipment, etc.) with deep domain knowledge.
-  </Card>
-</CardGroup>
-
-## Getting Started
-
-Ready to add product search capabilities to your AI agent? Here's how to get set up:
-
-## Getting Started: Your First Steps
-
-Setting up with Channel3 is easy. Get started in just a few steps:
-
-<Steps>
-  <Step title="Create Your Free Account">
-    First things first, you'll need a Channel3 account. This is where you'll
-    manage your API keys, track usage, and more.
-    <Card
-      title="Sign Up for Channel3"
-      icon="user-plus"
-      href="https://trychannel3.com/sign-up"
-    >
-      Use your Google account, GitHub, or email to sign up.
-    </Card>
-  </Step>
-  <Step title="Generate Your API Key">
-    Your API key identifies you to Channel3. We use it to track the sales you
-    drive, so you can get paid.
-    <Card
-      title="Go to API Keys in Dashboard"
-      icon="key"
-      href="https://trychannel3.com/dashboard/api"
-    >
-      Generate a new API key, and keep it safe.
-    </Card>
-  </Step>
-  <Step title="Add the Channel3 MCP to your agent.">
-    Our MCP is compatible with all popular MCP clients, such as OpenAI and
-    Claude.
-  </Step>
-</Steps>
-
-Choose your setup method based on your preferred platform:
+Ready to add product search capabilities to your AI agent? Simply add the Channel3 MCP with one of the below configurations.
 
 <CodeGroup>
 
@@ -149,4 +100,4 @@ curl -X POST https://api.openai.com/v1/responses -i \
 
 </CodeGroup>
 
-That's it! Your agent now has access to Channel3's product search capabilities. Start building and watch your AI come to life with real-world shopping superpowers. 🛍️
+That's it! Your agent can now find any product online.
