--- a/faq.mdx
+++ b/faq.mdx
@@ -4,70 +4,41 @@ title: FAQ
 
 ## How does Channel3 track clicks, views, and sales?
 
-### URL format
+When you call the `/search` endpoint, we return results with monetizable, trackable links.
 
-```text
-https://buy.trychannel3.com/<product_id>-<developer_id>
-```
+Our product links look like `https://buy.trychannel3.com/{product_id}-{your_unique_id}`.
 
-Example:
+Every click passes through our edge workers, where we confirm the click is valid (e.g. not a bot), and log it. When we send the end-user to the merchant site, we do so via another link provided by our affiliate partners, who track the sale.
 
-```text
-https://buy.trychannel3.com/12345-67890
-```
+## How do commissions work?
 
-### What each part means
+Channel3 partners with established affiliate networks and merchants. When a user clicks your Channel3 link and makes a purchase within the merchant’s attribution window:
 
-- **product_id**: The identifier of the product you want a user to buy. You can get this from the Channel3 API or from the Dashboard when viewing a product.
-- **developer_id**: Your developer/account identifier so we can attribute commissions and analytics to you.
+- The merchant approves or rejects the commission.
+- The affiliate network pays Channel3 once the commission is approved and the return window has passed.
+- After funds clear to Channel3, we credit your account balance. We show you estimated payouts in your dashboard so you can see what to expect.
 
-### Important details
+Commissions can be adjusted or canceled by networks or retailers for reasons such as returns, order cancellations, suspected fraud, attribution to another channel, or network quality concerns.
 
-- **One hyphen as the separator**: The single `-` character separates `product_id` and `developer_id`.
-- **IDs are opaque**: Use the IDs exactly as issued by Channel3. Do not alter, trim, or reformat them.
-- **Case sensitivity**: Treat IDs as case-sensitive. Copy them exactly from the API/Dashboard.
+## How does Channel3 make money?
 
-### Where to find these IDs
+We charge for the `/search` and `/enrich` endpoints on our API. We also take a cut of commission. Our default take rate is 50%, and will decrease as you drive more sales. Please <a href="mailto:support@trychannel3.com">contact us</a> with any questions..
 
-- **product_id**: Returned by the Search/Product APIs and visible in the Dashboard on product detail.
-- **developer_id**: Shown in the Dashboard under developer/account settings and returned by the API where applicable.
+## When will I get paid?
 
-### Query parameters
+We aim to get you paid as fast as possible.
 
-You can append standard marketing parameters (e.g., `utm_source`, `utm_medium`, `utm_campaign`) to the URL. They will be preserved through the checkout flow.
+Due to how merchants and affiliate networks confirm and remit commissions, payments are typically on a net‑90 basis from the transaction date. This timing is industry standard, and we’re actively working with partners to shorten it wherever possible.
 
-Example:
+To receive a payout, all of the following must be true:
 
-```text
-https://buy.trychannel3.com/12345-67890?utm_source=newsletter&utm_medium=email
-```
+- Your payment details are added and valid in the dashboard.
+- The commissions included have been approved by the merchant and paid to Channel3 by our affiliate partners.
 
-### Custom checkout domains
+What to expect:
 
-If you have a custom checkout domain configured with Channel3, the same path structure applies. Only the hostname changes.
+- Most merchants confirm and pay within 90–120 days of the transaction.
+- Your first payout generally arrives ~3 months after your first qualifying transactions; subsequent payouts occur monthly as additional commissions clear.
+- Amounts marked as “Pending” mean they haven’t been confirmed by the merchant/network yet, or they haven’t been paid to Channel3.
 
-```text
-https://buy.yourdomain.com/<product_id>-<developer_id>
-```
-
-### Error handling
-
-- If either ID is invalid or missing, the URL will not resolve and the user will see an error page (e.g., 404 or invalid link).
-- If the IDs are valid but the product is unavailable, the page will indicate that the item cannot be purchased.
-
-### Programmatic construction
-
-```js
-const productId = "<product_id>";
-const developerId = "<developer_id>";
-const checkoutUrl = `https://buy.trychannel3.com/${productId}-${developerId}`;
-```
-
-Use HTTPS and ensure you URL-encode any values you inject into the URL if they are not plain IDs.
-
-### Quick checklist
-
-- Use the exact `product_id` and `developer_id` you received from Channel3.
-- Join them with a single hyphen: `<product_id>-<developer_id>`.
-- Prefix with `https://buy.trychannel3.com/` (or your custom checkout domain).
-- Optionally add UTM params for attribution.
+If you need faster payouts or have any questions, please <a href="mailto:support@trychannel3.com">contact us</a>.
