Add basket demo

--- a/demos/shopping-assistant.mdx
+++ b/demos/shopping-assistant.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AI Shopping Assistant"
+title: "Shopping Assistant"
 description: "A customizable AI shopping assistant built with Channel3, Next.js, and the Vercel AI SDK that you can monetize."
 ---
 
