Updated quickstart and logos

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -28,15 +28,18 @@ description: "Get started with Channel3."
       Keep this key safe!
     </Card>
   </Step>
-  <Step title="Consider Your Use-Case">
-    <CardGroup cols={2}>
-      <Card title="Building an Agent?" icon="robot" href="/mcp-overview">
-        Add our MCP to your agent.
-      </Card>
-      <Card title="Building an App?" icon="code" href="/python-sdk">
-        Explore our SDKs, or call our API directly.
-      </Card>
-    </CardGroup>
+  <Step title="Start Building with the API">
+    Get started with Channel3 using our SDK or by calling the API directly.
+    <Card
+      title="Explore our SDK"
+      icon="code"
+      href="/sdk"
+    >
+      View installation instructions, code examples, and usage patterns for TypeScript and Python.
+    </Card>
+    <Note>
+      We also offer an MCP server. [Learn more about our MCP](/mcp-overview).
+    </Note>
   </Step>
 </Steps>
 
