--- a/faq.mdx
+++ b/faq.mdx
@@ -22,7 +22,7 @@ Commissions can be adjusted or canceled by networks or retailers for reasons suc
 
 ## How does Channel3 make money?
 
-We charge for the `/search` and `/enrich` endpoints on our API. We also take a cut of commission. Our default take rate is 50%, and will decrease as you drive more sales. Please <a href="mailto:support@trychannel3.com">contact us</a> with any questions..
+We charge for the `/search` and `/enrich` endpoints on our API. We also take a cut of commission. Our default take rate is 50%, and will decrease as you drive more sales. Please <a href="mailto:support@trychannel3.com">contact us</a> with any questions.
 
 ## When will I get paid?
 
