Add price tracking to docs

--- a/index.mdx
+++ b/index.mdx
@@ -24,3 +24,7 @@ Search for furniture, fashion, electronics — whatever you can think of – wit
 ### Earn commission on sales
 
 We've partnered with tens of thousands of brands who pay us when we drive them sales. We take a cut and pay you the rest.
+
+### Track prices over time
+
+Subscribe to products and get notified when prices change. Build deal alerts, price history charts, or smart buying recommendations for your users.
