--- a/pricing.mdx
+++ b/pricing.mdx
@@ -8,10 +8,13 @@ We charge per API call, and we take a cut of commissions paid out on our platfor
 
 Our inital cut is 50%, and will reduce as you drive more sales. Please <a href="mailto:support@trychannel3.com">contact us</a> with any questions about pricing.
 
-| Method    | Cost per call            |
-| --------- | ------------------------ |
-| /search   | $0.007 (first 1000 free) |
-| /enrich   | $0.025                   |
-| /brands   | Free                     |
-| /website  | Free                     |
-| /products | Free                     |
+| Method          | Cost                                   |
+| --------------- | -------------------------------------- |
+| /search         | $0.007 (first 1000 free)               |
+| /enrich         | $0.025                                 |
+| /brands         | Free                                   |
+| /website        | Free                                   |
+| /products       | Free                                   |
+| /price-tracking | $1.50/product/month (prorated daily)<sup>1</sup> |
+
+<sup>1</sup> Price tracking is prorated daily—you only pay for the days you're tracking a product. For example, if you start tracking a product then stop 5 days later, you'll only be charged $0.25.
