Updated webhooks link:

--- a/price-tracking-webhooks.mdx
+++ b/price-tracking-webhooks.mdx
@@ -8,4 +8,4 @@ When you subscribe to price tracking for a product, you can receive webhook noti
 
 Configure your webhook endpoint in the [Channel3 dashboard](https://trychannel3.com/dashboard).
 
-For payload details and event types, see our [webhook event catalog](https://www.svix.com/event-types/us/org_36FliKEHU3XdSVleNNs86PAppln/).
+For payload details and event types, see our [webhook event catalog](https://webhooks.trychannel3.com/).
